Fixed too short content area in MDS

--- a/platform/mds/mds/src/main/resources/webapp/css/mds.css
+++ b/platform/mds/mds/src/main/resources/webapp/css/mds.css
@@ -563,8 +563,6 @@
 
 #lookup-dialog {
     max-width: 80%;
-    top: 50px;
-    left: 50px;
 }
 
 #lookup-dialog .single-field-selection {
